--- a/styles/style.css
+++ b/styles/style.css
@@ -41,23 +41,22 @@ font-size: 18px;
 margin: 20px 0px;
 }
 /* feature style */
-.feature-container{
+.feature-container , .instagram-container{
     width:70%;
     margin: auto;
     margin-top: 50px;
     text-align: center;
 }
-.feature-title{
+.feature-title , .instagram-title{
 color: #272727;
 font-size: 40px;
 }
-.feature-para{
-
-color: rgba(39, 39, 39, 0.60);
-width: 594px;
-font-size: 18px;
-margin: auto;
-margin-top: 40px;
+.feature-para , .instagram-desc{
+ color: rgba(39, 39, 39, 0.60);
+ width: 594px;
+ font-size: 18px;
+ margin: auto;
+ margin-top: 40px;
 }
 .feature-images{
     display: flex;
@@ -93,7 +92,7 @@ margin-top: 40px;
       height: 520px;
   }
   .image3{
-    margin-top: 95px;
+    margin-top: 92px;
     margin-left: 10px;
   
 }
@@ -101,4 +100,32 @@ margin-top: 40px;
     margin: 15px;
     color: #272727;
     font-size: 22px;
+}
+/* hot deal */
+.hot-deal{
+ background: rgba(221, 115, 138, 0.2);
+ display: flex;
+ justify-content: space-around;
+ align-items: center;
+ text-align: center;
+}
+.hot-deal-title{
+    color: #272727;
+    font-size: 40px;
+}
+.hot-deal-para{
+    color: rgba(39, 39, 39, 0.60);
+    width: 594px;
+    text-align: center;
+    font-size: 18px;
+    margin: 20px;
+}
+.hot-deal-img{
+    margin: 50px 100px 50px 0px;
+}
+/* instagram style */
+.instagram-image{
+    display: flex;
+    gap: 20px;
+    margin-top: 40px;
 }
