--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ margin: 20px 0px;
     margin-top: 50px;
     text-align: center;
 }
-.feature-title , .instagram-title{
+.title{
 color: #272727;
 font-size: 40px;
 }
@@ -129,3 +129,34 @@ font-size: 40px;
     gap: 20px;
     margin-top: 40px;
 }
+/* latest style */
+.latest{
+    background-image: url("../images/bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width:70%;
+    height: 400px;
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
+}
+.latest-title{
+    color: #272727;
+    font-size: 40px;
+    padding-top: 80px;
+    }
+
+.latest-para{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    margin-top: 30px;
+   }
+.latest input{
+    margin-top: 60px;
+    width: 700px;
+    height: 64px;
+    border-radius: 8px;
+    background-color: #FFF;
+    border: none;
+   }
+.latest button{margin-left: 30px;}
