--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@ margin: 20px 0px;
 }
 /* feature style */
 .feature-container , .instagram-container{
-    /* background-color: #E55473; */
+    /* background-color: #E55473;  */
     width:80%;
     height: 550px;
     margin: 0 auto;
@@ -55,7 +55,7 @@ font-size: 40px;
 }
 .feature-para , .instagram-desc{
  color: rgba(39, 39, 39, 0.60);
- width: 600px;
+ width: 400px;
  font-size: 18px;
  margin: auto;
  margin-top: 20px;
@@ -127,7 +127,8 @@ font-size: 40px;
  display: flex;
  justify-content: space-around;
  align-items: center;
- width: 100%;
+ /* width: 100%; */
+ margin-top: 40px;
  text-align: center;
 }
 .hot-deal-title{
@@ -147,15 +148,19 @@ font-size: 40px;
 /* instagram style */
 .instagram-image{
     display: flex;
-    gap: 20px;
+    gap: 10px;
     margin-top: 40px;
+}
+.insta-img{
+    width: 280px;
+    height: 250px;
 }
 /* latest style */
 .latest{
     background-image: url("../images/bg.png");
     background-size: cover;
     background-repeat: no-repeat;
-    width:70%;
+    width:80%;
     height: 400px;
     margin: auto;
     margin-top: 50px;
