--- a/styles/style.css
+++ b/styles/style.css
@@ -167,6 +167,7 @@ font-size: 40px;
     margin: auto;
     margin-top: 50px;
     text-align: center;
+    margin-bottom: 40px;
 }
 .latest-title{
     color: #272727;
@@ -196,6 +197,7 @@ font-size: 40px;
     margin-bottom: 30px;
     width: 80%;
     margin: auto;
+    margin-bottom: 40px;
     
 }
 .review-title{
